internal/gatewayapi/testdata/gateway-with-listener-with-invalid-tls-configuration-invalid-mode.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - name: tls
        protocol: HTTPS
        port: 443
        allowedRoutes:
          namespaces:
            from: All
        tls:
          mode: Passthrough
          certificateRefs:
            - name: tls-secret-1
secrets:
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: envoy-gateway
    name: tls-secret-1
  type: kubernetes.io/tls
  data:
    tls.crt: Zm9vCg==
    tls.key: YmFyCg==
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    parentRefs:
      - namespace: envoy-gateway
        name: gateway-1
    rules:
      - matches:
          - path:
              value: "/"
        backendRefs:
          - name: service-1
            port: 8080
